[3.9] bpo-45806: Fix recovery from stack overflow for 3.9. Again. (GH-29640)

Co-authored-by: Łukasz Langa <lukasz@langa.pl>