Python/ceval.c
@@ -797,19 +797,21 @@ _Py_CheckRecursiveCall(PyThreadState *tstate, const char *where)
         /* Somebody asked that we don't check for recursion. */
         return 0;
     if (tstate->overflowed) {
-        if (tstate->recursion_depth > recursion_limit + 50) {
+        if (tstate->recursion_depth > recursion_limit + 50 || tstate->overflowed > 50) {
             /* Overflowing while handling an overflow. Give up. */
             Py_FatalError("Cannot recover from stack overflow.");
         }
-        return 0;
     }
-    if (tstate->recursion_depth > recursion_limit) {
-        --tstate->recursion_depth;
-        tstate->overflowed = 1;
-        _PyErr_Format(tstate, PyExc_RecursionError,
-                      "maximum recursion depth exceeded%s",
-                      where);
-        return -1;
+    else {
+        if (tstate->recursion_depth > recursion_limit) {
+            tstate->overflowed++;
+            _PyErr_Format(tstate, PyExc_RecursionError,
+                        "maximum recursion depth exceeded%s",
+                        where);
+            tstate->overflowed--;
+            --tstate->recursion_depth;
+            return -1;
+        }
     }
     return 0;
 }
